# osse

./: .dockerignore  .env  .env.docker  .env.example  .env.testing  .gitignore  .gitmodules  Caddyfile  Cargo.toml  README.md  _ide_helper_models.php  composer.json  config.example.json  docker-compose.yml  osse.sh  package-lock.json  production-setup.sh  static-build.Dockerfile
.github/workflows/: deploy.yml  test.yml
app/: ScanFiles.php
app/Enums/: ScanStatus.php
app/Events/: ScanCancelled.php  ScanCompleted.php  ScanFailed.php  ScanProgressed.php  ScanStarted.php
app/Jobs/: ScanMusic.php
app/Models/: Album.php  Artist.php  CoverArt.php  PlaybackSession.php  Playlist.php  ScanDirectory.php  ScanJob.php  Track.php  User.php  UserSetting.php
bootstrap/: app.php
config/: app.php  auth.php  broadcasting.php  cors.php  filesystems.php  logging.php  reverb.php  sanctum.php  scan.php  session.php
database/factories/: PlaylistFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  (+2 more)
deployment/: Caddyfile.template  php.ini
docker/: Caddyfile-http  Caddyfile-https  Dockerfile  entrypoint.sh  supervisor.conf
osse-broadcast/: Dockerfile  go.mod  go.sum
osse-core/: .dockerignore  .env.example  .env.testing  .gitignore  Dockerfile  _ide_helper.php  composer.json  docker-compose.yml  package-lock.json  production-setup.sh  run-core.sh
osse-web/: .dockerignore  Dockerfile  package.json
routes/: api.php  channels.php  console.php  web.php
src/: args.rs  config.rs  global.rs  main.rs  schema.rs
systemd/: osse.target
tests/: TestCase.php
(+157 files in other folders)
