[package]
name = "osse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "time", "r2d2"] }
poem = "3.0.0"
tokio = {version = "1.37.0", features = ["rt-multi-thread"]}
lofty = "0.21.0"
time = {version = "0.3.36", features = ["serde"]}
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
